amélioration visuelle des tirages et nettoyage de code

--- a/source/gui/ui/DisplayWindow.ui
+++ b/source/gui/ui/DisplayWindow.ui
@@ -27,7 +27,7 @@
     <item row="2" column="0">
      <widget class="QStackedWidget" name="PageManager">
       <property name="currentIndex">
-       <number>2</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="pageEventTitle">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -246,7 +246,7 @@
           </property>
           <layout class="QVBoxLayout" name="verticalLayout">
            <item>
-            <widget class="QLabel" name="RT_SubRound_1">
+            <widget class="QLabel" name="RT_SubRound">
              <property name="text">
               <string>TextLabel</string>
              </property>
@@ -256,16 +256,45 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="RT_SubRound_2">
+            <widget class="QLabel" name="RT_ValeurLbl">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>16</pointsize>
+               <bold>true</bold>
+              </font>
+             </property>
              <property name="text">
-              <string>TextLabel</string>
+              <string>Valeur</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="RT_SubRound_3">
+            <widget class="QLabel" name="RT_Valeur">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="font">
+              <font>
+               <pointsize>24</pointsize>
+              </font>
+             </property>
              <property name="text">
-              <string>TextLabel</string>
+              <string>0 €</string>
+             </property>
+             <property name="alignment">
+              <set>Qt::AlignCenter</set>
              </property>
             </widget>
            </item>
@@ -426,32 +455,32 @@
            </property>
            <item>
             <widget class="QFrame" name="frame_7">
-                <property name="sizePolicy">
-                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                        <horstretch>10</horstretch>
-                        <verstretch>0</verstretch>
-                    </sizepolicy>
-                </property>
-                <property name="frameShape">
-                    <enum>QFrame::NoFrame</enum>
-                </property>
-                <property name="frameShadow">
-                    <enum>QFrame::Raised</enum>
-                </property>
-                <layout class="QVBoxLayout" name="verticalLayout_3">
-                    <property name="leftMargin">
-                        <number>0</number>
-                    </property>
-                    <property name="topMargin">
-                        <number>0</number>
-                    </property>
-                    <property name="rightMargin">
-                        <number>0</number>
-                    </property>
-                    <property name="bottomMargin">
-                        <number>0</number>
-                    </property>
-                    <item>
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <horstretch>10</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::NoFrame</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_3">
+              <property name="leftMargin">
+               <number>0</number>
+              </property>
+              <property name="topMargin">
+               <number>0</number>
+              </property>
+              <property name="rightMargin">
+               <number>0</number>
+              </property>
+              <property name="bottomMargin">
+               <number>0</number>
+              </property>
+              <item>
                <widget class="QTableWidget" name="RR_NumberGrid">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -461,7 +490,6 @@
                 </property>
                 <property name="font">
                  <font>
-                     <weight>75</weight>
                   <bold>true</bold>
                  </font>
                 </property>
@@ -573,19 +601,32 @@
                  <enum>QFrame::Raised</enum>
                 </property>
                 <layout class="QGridLayout" name="gridLayout_4">
-                    <item row="0" column="0">
-                        <widget class="QLabel" name="RR_SubRoundPrice">
-                            <property name="sizePolicy">
-                                <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                                    <horstretch>0</horstretch>
-                                    <verstretch>3</verstretch>
-                                </sizepolicy>
-                            </property>
-                            <property name="text">
-                                <string>Un vélo en plmastique</string>
-                            </property>
+                 <item row="0" column="0">
+                  <widget class="QLabel" name="RR_SubRoundPrice">
+                   <property name="sizePolicy">
+                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                     <horstretch>4</horstretch>
+                     <verstretch>1</verstretch>
+                    </sizepolicy>
+                   </property>
+                   <property name="text">
+                    <string>Un vélo en plmastique</string>
+                   </property>
                    <property name="scaledContents">
                     <bool>true</bool>
+                   </property>
+                  </widget>
+                 </item>
+                 <item row="0" column="1">
+                  <widget class="QLabel" name="RR_SubRoundValue">
+                   <property name="sizePolicy">
+                    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+                     <horstretch>1</horstretch>
+                     <verstretch>1</verstretch>
+                    </sizepolicy>
+                   </property>
+                   <property name="text">
+                    <string>TextLabel</string>
                    </property>
                   </widget>
                  </item>
@@ -595,34 +636,34 @@
              </layout>
             </widget>
            </item>
+           <item>
+            <widget class="QFrame" name="frame_3">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="frameShape">
+              <enum>QFrame::NoFrame</enum>
+             </property>
+             <property name="frameShadow">
+              <enum>QFrame::Raised</enum>
+             </property>
+             <layout class="QVBoxLayout" name="verticalLayout_2">
+              <property name="leftMargin">
+               <number>4</number>
+              </property>
+              <property name="topMargin">
+               <number>4</number>
+              </property>
+              <property name="rightMargin">
+               <number>4</number>
+              </property>
+              <property name="bottomMargin">
+               <number>4</number>
+              </property>
               <item>
-                  <widget class="QFrame" name="frame_3">
-                      <property name="sizePolicy">
-                          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-                              <horstretch>0</horstretch>
-                              <verstretch>0</verstretch>
-                          </sizepolicy>
-                      </property>
-                      <property name="frameShape">
-                          <enum>QFrame::NoFrame</enum>
-                      </property>
-                      <property name="frameShadow">
-                          <enum>QFrame::Raised</enum>
-                      </property>
-                      <layout class="QVBoxLayout" name="verticalLayout_2">
-                          <property name="leftMargin">
-                              <number>4</number>
-                          </property>
-                          <property name="topMargin">
-                              <number>4</number>
-                          </property>
-                          <property name="rightMargin">
-                              <number>4</number>
-                          </property>
-                          <property name="bottomMargin">
-                              <number>4</number>
-                          </property>
-                          <item>
                <widget class="QGroupBox" name="groupBox_11">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -644,22 +685,22 @@
                 </layout>
                </widget>
               </item>
-                          <item>
-                              <widget class="QLabel" name="RR_Logo">
-                                  <property name="sizePolicy">
-                                      <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-                                          <horstretch>1</horstretch>
-                                          <verstretch>1</verstretch>
-                                      </sizepolicy>
-                                  </property>
-                                  <property name="text">
-                                      <string>&lt;logo&gt;</string>
-                                  </property>
-                                  <property name="alignment">
-                                      <set>Qt::AlignCenter</set>
-                                  </property>
-                              </widget>
-                          </item>
+              <item>
+               <widget class="QLabel" name="RR_Logo">
+                <property name="sizePolicy">
+                 <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+                  <horstretch>1</horstretch>
+                  <verstretch>1</verstretch>
+                 </sizepolicy>
+                </property>
+                <property name="text">
+                 <string>&lt;logo&gt;</string>
+                </property>
+                <property name="alignment">
+                 <set>Qt::AlignCenter</set>
+                </property>
+               </widget>
+              </item>
               <item>
                <spacer name="verticalSpacer">
                 <property name="orientation">
@@ -820,7 +861,7 @@
          </spacer>
         </item>
         <item row="2" column="0">
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="RE_Message">
           <property name="text">
            <string>Veuillez démarquer vos cartons.</string>
           </property>
@@ -863,7 +904,7 @@
            </sizepolicy>
           </property>
           <property name="text">
-           <string>TextLabel</string>
+           <string>&lt;logo&gt;</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -873,17 +914,14 @@
        </layout>
       </widget>
       <widget class="QWidget" name="pageEventPause">
-       <layout class="QGridLayout" name="gridLayout_10">
+       <layout class="QGridLayout" name="gridLayout_10" columnstretch="0,0,0">
         <item row="5" column="1">
          <widget class="QLabel" name="EP_Logo">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
             <verstretch>2</verstretch>
            </sizepolicy>
-          </property>
-          <property name="text">
-           <string>&lt;logo&gt;</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -911,7 +949,7 @@
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
-            <verstretch>1</verstretch>
+            <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="text">
@@ -943,7 +981,7 @@
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>0</horstretch>
-            <verstretch>1</verstretch>
+            <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="font">
@@ -1212,9 +1250,6 @@ Le gagnant sera celui qui tire le plus grand numéro.
           <property name="text">
            <string>&lt;logo&gt;</string>
           </property>
-          <property name="scaledContents">
-           <bool>false</bool>
-          </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
@@ -1243,9 +1278,6 @@ Le gagnant sera celui qui tire le plus grand numéro.
           </property>
           <property name="text">
            <string>&lt;logo&gt;</string>
-          </property>
-          <property name="scaledContents">
-           <bool>false</bool>
           </property>
          </widget>
         </item>
