--- a/source/gui/ui/ConfigGameRounds.ui
+++ b/source/gui/ui/ConfigGameRounds.ui
@@ -327,7 +327,7 @@
          <item row="0" column="0">
           <widget class="QStackedWidget" name="PhaseConfiguration">
            <property name="currentIndex">
-            <number>0</number>
+            <number>1</number>
            </property>
            <widget class="QWidget" name="pagePartie">
             <layout class="QGridLayout" name="gridLayout_7">
@@ -343,22 +343,8 @@
              <property name="bottomMargin">
               <number>0</number>
              </property>
-             <item row="0" column="0">
-              <widget class="QLabel" name="label_11">
-               <property name="text">
-                <string>Valeur Totale</string>
-               </property>
-              </widget>
-             </item>
              <item row="0" column="3">
               <widget class="QComboBox" name="SubRoundTypes"/>
-             </item>
-             <item row="1" column="0" colspan="2">
-              <widget class="QLabel" name="label_2">
-               <property name="text">
-                <string>Condition de victoire:</string>
-               </property>
-              </widget>
              </item>
              <item row="1" column="3" rowspan="2">
               <widget class="QDoubleSpinBox" name="PricesValue">
@@ -370,10 +356,24 @@
                </property>
               </widget>
              </item>
+             <item row="1" column="0" colspan="2">
+              <widget class="QLabel" name="label_2">
+               <property name="text">
+                <string>Condition de victoire:</string>
+               </property>
+              </widget>
+             </item>
              <item row="4" column="0" colspan="4">
               <widget class="QTextEdit" name="TextPrices">
                <property name="undoRedoEnabled">
                 <bool>false</bool>
+               </property>
+              </widget>
+             </item>
+             <item row="0" column="0">
+              <widget class="QLabel" name="label_11">
+               <property name="text">
+                <string>Valeur Totale</string>
                </property>
               </widget>
              </item>
@@ -487,6 +487,47 @@
              </item>
             </layout>
            </widget>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QFrame" name="groupPreview">
+           <property name="frameShape">
+            <enum>QFrame::NoFrame</enum>
+           </property>
+           <property name="frameShadow">
+            <enum>QFrame::Raised</enum>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <property name="leftMargin">
+             <number>0</number>
+            </property>
+            <property name="topMargin">
+             <number>0</number>
+            </property>
+            <property name="rightMargin">
+             <number>0</number>
+            </property>
+            <property name="bottomMargin">
+             <number>0</number>
+            </property>
+            <item>
+             <widget class="QCheckBox" name="checkPreVisu">
+              <property name="text">
+               <string>Aperçu</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QCheckBox" name="checkFullScreenPreVisu">
+              <property name="text">
+               <string>Plein écran</string>
+              </property>
+              <property name="checked">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </widget>
          </item>
         </layout>
@@ -963,8 +1004,8 @@
    <slot>actEndEditingPrice()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>867</x>
-     <y>355</y>
+     <x>873</x>
+     <y>341</y>
     </hint>
     <hint type="destinationlabel">
      <x>979</x>
@@ -1212,6 +1253,38 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>checkPreVisu</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ConfigGameRounds</receiver>
+   <slot>actTogglePreview()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>652</x>
+     <y>359</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>903</x>
+     <y>379</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkFullScreenPreVisu</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ConfigGameRounds</receiver>
+   <slot>actTogglePreviewFullScreen()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>794</x>
+     <y>355</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>904</x>
+     <y>354</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>actOk()</slot>
@@ -1236,5 +1309,7 @@
   <slot>actChangePriceValue()</slot>
   <slot>actChangePause()</slot>
   <slot>actFindDiapo()</slot>
+  <slot>actTogglePreview()</slot>
+  <slot>actTogglePreviewFullScreen()</slot>
  </slots>
 </ui>
